k8s_files/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db-deployment
  namespace: service-prod
  labels:
    app: mysql-db
    type: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
      type: db
  template:
    metadata:
      labels:
        app: mysql-db
        type: db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
