k8s_files/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
  namespace: nagp-assignment-pg
  labels:
    app: mysql-db
    type: db
spec:
  serviceName: "mysql-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
      type: db
  template:
    metadata:
      labels:
        app: mysql-db
        type: db
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d/
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: initdb
          configMap:
            name: db-init-config
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
