k8s_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-service-deployment
  namespace: nagp-assignment-pg
  labels:
    app: spring-boot-service
    type: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring-boot-service
      type: backend
  template:
    metadata:
      name: spring-boot-service-pod
      labels:
        app: spring-boot-service
        type: backend
    spec:
      containers:
        - name: spring-boot-service-container
          image: getabhay/simple-microservice:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
