k8s_files/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: service-prod
spec:
  selector:
    app: mysql-db
    type: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  # clusterIP: None # Removed for a standard ClusterIP service unless headless is specifically required
