k8s_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-service
  namespace: nagp-assignment-pg
spec:
  selector:
    app: spring-boot-service
    type: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
